syntax = "proto3";

//Fibonacci calculation service
service FibonacciCalculator {
  //Calculate a given F(n)
  rpc Calculate(SimpleFibonacciQuery) returns (SimpleFibonacciReply) {}
  rpc CalculateReturnJsonString(SimpleFibonacciQuery) returns (JsonFibonacciReply) {}
}

message SimpleFibonacciQuery{
  int32 fibonacciQuery = 1;
}

message SimpleFibonacciReply{
  string fibonacciResult = 1;
}

message JsonFibonacciReply{
  string fibonacciJsonResult = 1;
}